# irescue

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: pytest-workflow.yml
example/: Aligned.sortedByCoord.out.bam.bai
irescue/: _genomes.py  _version.py  count.py  em.py  main.py  map.py  misc.py  network.py
tests/: Aligned.sortedByCoord.out.bam  condarc.yml  environment.yml  test.yml
tests/config/: environment.yml
tests/data/: Aligned.sortedByCoord.out.bam.bai  whitelist.txt
