[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "IRescue"
description = "Uncertainty-aware quantification of transposable elements expression in scRNA-seq"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Benedetto Polimeni", email = "polimeni@ingm.org" },
]
keywords = [
    "bioinformatics",
    "transposable-elements",
    "scrna-seq",
    "single-cell",
    "single-cell-rna-seq",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy >= 1.20.2",
    "pysam >= 0.16.0.1",
    "requests >= 2.27.1",
    "networkx >= 3.1",
]
dynamic = ["version"]

[project.scripts]
irescue = "irescue.main:main"

[project.urls]
"Source Code" = "https://github.com/bodegalab/irescue"
Documentation = "https://github.com/bodegalab/irescue#readme"
"Bug Tracker" = "https://github.com/bodegalab/irescue/issues"

[tool.setuptools.dynamic]
version = {attr = "irescue._version.__version__"}
