[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "IRescue"
description = "Uncertainty-aware quantification of transposable elements expression in scRNA-seq"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Benedetto Polimeni", email = "polimeni@ingm.org" },
]
keywords = [
    "bioinformatics",
    "transposable-elements",
    "scrna-seq",
    "single-cell",
    "single-cell-rna-seq",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy >=1.21, <3",
    "pysam >=0.17, <1",
    "requests >=2.25, <3",
    "networkx >=2.6, <4",
    "scipy >=1.6, <2"
]
dynamic = ["version"]

[project.scripts]
irescue = "irescue.main:main"

[project.urls]
"Source Code" = "https://github.com/bodegalab/irescue"
Documentation = "https://github.com/bodegalab/irescue#readme"
"Bug Tracker" = "https://github.com/bodegalab/irescue/issues"

[tool.setuptools.dynamic]
version = {attr = "irescue._version.__version__"}
